# gst-faceblur

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
src/: gstfaceblur.c  gstfaceblur.h  meson.build
tests/: test_pipeline.sh  test_plugin_load.ps1  test_plugin_load.sh
